--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,7 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
     def mockitoVersion = '3.6.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
     testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: mockitoVersion
