--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'com.google.guava:guava:32.0.1-android'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
