--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,57 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    dependencies {
+        classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
+    }
+}
+
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
-    id 'idea'
     id 'application'
-    id "io.freefair.lombok" version "5.1.0"
+    id 'idea'
+}
+
+group = 'com.bordozer'
+project.setProperty("mainClassName", "logr.App")
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile group: 'commons-io', name: 'commons-io', version: '2.8.0'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    implementation 'com.google.guava:guava:32.0.1-android'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.5.0-M3'
+    implementation group: 'com.google.guava', name: 'guava', version: '33.4.0-jre'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
-
-    testCompile 'org.junit.jupiter:junit-jupiter:5.6.0'
+    testCompileOnly 'org.projectlombok:lombok:1.18.36'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
     def mockitoVersion = '3.6.0'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: mockitoVersion
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: mockitoVersion
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
 }
 
-jar {
-    manifest {
-        attributes "Main-Class": "logr.App"
-    }
-
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-}
-
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Main-Class': 'logr.App'
-    }
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-    with jar
-}
-
-test {
+tasks.named('test') {
     useJUnitPlatform()
     systemProperties System.properties
     testLogging {
